--- a/config/database.yml
+++ b/config/database.yml
@@ -24,10 +24,7 @@ default: &default
 development:
   <<: *default
   database: budget_development
-  username: postgres
-  password: postgres
-  host: localhost
-  port: 5432
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -61,10 +58,7 @@ development:
 test:
   <<: *default
   database: budget_test
-  username: postgres
-  password: postgres
-  host: localhost
-  port: 5432
+
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -87,8 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: budget_production
-  username: postgres
-  password: postgres
-  host: localhost
-  port: 5432
+  password: <%= ENV["BUDGET_DATABASE_PASSWORD"] %>
