--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 databases:
   - name: budget
+    plan: free
     databaseName: budget
     user: budget_user
 
 services:
   - type: web
+    plan: free
     name: budget_app
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
